--- a/telegraf/Dockerfile
+++ b/telegraf/Dockerfile
@@ -16,6 +16,6 @@ COPY telegraf.conf /etc/telegraf/
 RUN chmod a+x /run.sh
 
 COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["sh","/entrypoint.sh"]
 
-CMD [ "/run.sh" ]
+CMD [ "sh","/run.sh" ]
