--- a/telegraf/config.json
+++ b/telegraf/config.json
@@ -7,11 +7,11 @@
   "startup": "system",
   "boot": "auto",
   "arch": [
-    "aarch64",
+    "armel",
     "amd64",
     "armhf",
+    "arm64",
     "armv7",
-    "i386"
   ],
   "ports": {
     "8092/udp": 8092,
