--- a/telegraf/Dockerfile
+++ b/telegraf/Dockerfile
@@ -16,6 +16,7 @@ COPY telegraf.conf /etc/telegraf/
 RUN chmod a+x /run.sh
 
 COPY entrypoint.sh /entrypoint.sh
+RUN chmod a+x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
 CMD [ "/run.sh" ]
