--- a/influxdb/rootfs/etc/influxdb/influxdb.conf
+++ b/influxdb/rootfs/etc/influxdb/influxdb.conf
@@ -19,8 +19,13 @@ reporting-disabled = false
 [logging]
     level="warn"
 
-[collectd]
+[[collectd]]
   enabled = true
-  port = 25826
-  database = "collectd_db"
-  typesdb = "/data/influxdb/collectd_types.db"    
+  bind-address = ":25826"
+  database = "collectd"
+  retention-policy = ""
+  batch-size = 5000
+  batch-pending = 10
+  batch-timeout = "10s"
+  read-buffer = 0
+  typesdb = "/usr/share/collectd/types.db"
