minor config fixes

--- a/influxdb/rootfs/etc/influxdb/influxdb.conf
+++ b/influxdb/rootfs/etc/influxdb/influxdb.conf
@@ -23,9 +23,11 @@ reporting-disabled = false
   enabled = true
   bind-address = ":25826"
   database = "collectd"
+  parse-multivalue-plugin = "join"
   retention-policy = ""
   batch-size = 5000
   batch-pending = 10
   batch-timeout = "10s"
+  security-level = "none"
   read-buffer = 0
   typesdb = "/usr/share/collectd/types.db"
