--- a/influxdb/config.json
+++ b/influxdb/config.json
@@ -1,6 +1,6 @@
 {
   "name": "InfluxDB",
-  "version": "dev-3",
+  "version": "dev-4",
   "slug": "influxdb",
   "description": "Scalable datastore for metrics, events, and real-time analytics",
   "url": "https://github.com/hassio-addons/addon-influxdb",
@@ -24,12 +24,12 @@
   "ports": {
     "80/tcp": null,
     "8086/tcp": 8086,
-    "25826/tcp": 25826
+    "25826/udp": 25826
   },
   "ports_description": {
     "80/tcp": "Web interface (Not required for Hass.io Ingress)",
     "8086/tcp": "InfluxDB server",
-    "25826/tcp": "Collectd server"
+    "25826/udp": "Collectd server"
   },
   "hassio_api": true,
   "auth_api": true,
