--- a/influxdb/config.json
+++ b/influxdb/config.json
@@ -23,11 +23,13 @@
   "boot": "auto",
   "ports": {
     "80/tcp": null,
-    "8086/tcp": 8086
+    "8086/tcp": 8086,
+    "25826/udp": 25826
   },
   "ports_description": {
     "80/tcp": "Web interface (Not required for Hass.io Ingress)",
-    "8086/tcp": "InfluxDB server"
+    "8086/tcp": "InfluxDB server",
+    "25826/udp": "InfluxDB server Collectd"
   },
   "hassio_api": true,
   "auth_api": true,
