--- a/victoriametrics/config.json
+++ b/victoriametrics/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Victoria Metrics",
-  "version": "1.68.0.1,
+  "version": "1.68.0.1",
   "slug": "victoria_metrics",
   "stage": "experimental",
   "description": "Local Victoria Metrics TSDB",
