--- a/victoriametrics/Dockerfile
+++ b/victoriametrics/Dockerfile
@@ -1,10 +1,53 @@
-ARG BUILD_FROM
-FROM $BUILD_FROM
+ARG BUILD_FROM=ghcr.io/hassio-addons/debian-base/amd64:5.1.1
+# hadolint ignore=DL3006
+FROM ${BUILD_FROM}
 
+# Set shell
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV LANG C.UTF-8
 
-# Copy data for add-on
-COPY victoria-metrics-prod /
-RUN chmod a+x /victoria-metrics-prod
+# Setup base system
+ARG BUILD_ARCH=amd64
+RUN \
+    VICTORIAMETRICS_VERSION="1.68.0" \
+    \
+    && ARCH="${BUILD_ARCH}" \
+    && if [ "${BUILD_ARCH}" = "aarch64" ]; then ARCH="arm64"; fi \
+    && if [ "${BUILD_ARCH}" = "armv7" ]; then ARCH="armhf"; fi \
+    \
+    && curl -J -L -o /tmp/grafana.deb \
+        "https://dl.grafana.com/oss/release/grafana_${GRAFANA}_${ARCH}.deb" \
+        curl -fL https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/$VICTORIAMETRICS_VERSION/victoria-metrics-{$ARCH}-v${VICTORIAMETRICS_VERSION}.tar.gz -o victoria-metrics.tar.gz
+RUN tar -xzf victoria-metrics.tar.gz -C /usr/local/bin
 
-CMD [ "/victoria-metrics-prod", "-storageDataPath", "/data"]
+# Copy root filesystem
+COPY rootfs /
+
+# Build arguments
+ARG BUILD_ARCH
+ARG BUILD_DATE
+ARG BUILD_DESCRIPTION
+ARG BUILD_NAME
+ARG BUILD_REF
+ARG BUILD_REPOSITORY
+ARG BUILD_VERSION
+
+# Labels
+LABEL \
+    io.hass.name="${BUILD_NAME}" \
+    io.hass.description="${BUILD_DESCRIPTION}" \
+    io.hass.arch="${BUILD_ARCH}" \
+    io.hass.type="addon" \
+    io.hass.version=${BUILD_VERSION} \
+    maintainer="maaad" \
+    io.hass.name="${BUILD_NAME}" \
+    io.hass.description="${BUILD_DESCRIPTION}" \
+    org.opencontainers.image.vendor="Home Assistant Add-ons" \
+    org.opencontainers.image.authors="maaad" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="https://addons.community" \
+    org.opencontainers.image.source="https://github.com/${BUILD_REPOSITORY}" \
+    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/main/README.md" \
+    org.opencontainers.image.created=${BUILD_DATE} \
+    org.opencontainers.image.revision=${BUILD_REF} \
+    org.opencontainers.image.version=${BUILD_VERSION}
