--- a/victoriametrics/config.json
+++ b/victoriametrics/config.json
@@ -1,12 +1,14 @@
 {
   "name": "Victoria Metrics",
-  "version": "1.68.0.1",
+  "version": "dev",
   "slug": "victoria_metrics",
   "stage": "experimental",
   "description": "Local Victoria Metrics TSDB",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "application",
   "boot": "auto",
+  "ingress": true,
+  "ingress_port": 8428,
   "options": {
     "retention": "3"
   },
@@ -16,5 +18,6 @@
   "webui": "http://[HOST]:[PORT:8428]/",
   "ports": {
     "8428/tcp": 8428
+    "8089/tcp": 8089
   }
 }
