--- a/victoriametrics/config.json
+++ b/victoriametrics/config.json
@@ -17,7 +17,7 @@
   },
   "webui": "http://[HOST]:[PORT:8428]/",
   "ports": {
-    "8428/tcp": 8428
+    "8428/tcp": 8428,
     "8089/tcp": 8089
   }
 }
