--- a/victoriametrics/Dockerfile
+++ b/victoriametrics/Dockerfile
@@ -15,7 +15,8 @@ RUN \
     && if [ "${BUILD_ARCH}" = "aarch64" ]; then ARCH="arm64"; fi \
     && if [ "${BUILD_ARCH}" = "armv7" ]; then ARCH="armhf"; fi \
     \
-    && curl -fL https://github.com/VictoriaMetrics/VictoriaMetriccs/releases/download/${VICTORIAMETRICS_VERSION}/victoria-metrics-${ARCH}-${VICTORIAMETRICS_VERSION}.tar.gz -o victoria-metrics.tar.gz \
+    && echo "nameserver 1.1.1.1" > /etc/resolv.conf \
+    && curl -fL https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/${VICTORIAMETRICS_VERSION}/victoria-metrics-${ARCH}-${VICTORIAMETRICS_VERSION}.tar.gz -o victoria-metrics.tar.gz \ 
     && tar -xzf victoria-metrics.tar.gz -C /usr/local/bin
 
 # Copy root filesystem
