--- a/victoriametrics/config.json
+++ b/victoriametrics/config.json
@@ -7,6 +7,7 @@
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
   "boot": "auto",
+  "map": ["config:rw"],
   "ingress": true,
   "ingress_port": 8428,
   "options": {
