--- a/victoriametrics/config.json
+++ b/victoriametrics/config.json
@@ -8,6 +8,7 @@
   "startup": "services",
   "boot": "auto",
   "map": ["config:rw"],
+  "init": "false",
   "ingress": true,
   "ingress_port": 8428,
   "options": {
