--- a/netatalk/config.json
+++ b/netatalk/config.json
@@ -15,11 +15,11 @@
   },
   "map": ["config:rw", "ssl:rw", "addons:rw", "share:rw", "backup:rw", "media:rw"],
   "options": {
-    "afp_username": "afp",
-    "afp_password": "afp"
+    "username": "afp",
+    "password": "afp"
   },
   "schema": {
-    "afp_username": "str",
-    "afp_password": "str"
+    "username": "str",
+    "password": "str"
   }
 }
