--- a/netatalk/rootfs/etc/afp.conf
+++ b/netatalk/rootfs/etc/afp.conf
@@ -1,5 +1,5 @@
-# create config
-echo $'[Global]
+[Global]
+mimic model = TimeCapsule6,106
 log file = /dev/stdout
 uam list = uams_guest.so uams_dhx2.so uams_dhx.so
 hostname = homeassistant.local
