--- a/netatalk/Dockerfile
+++ b/netatalk/Dockerfile
@@ -10,7 +10,7 @@ ENV LANG C.UTF-8
 ARG BUILD_ARCH=amd64
 
 RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.12/main" > /etc/apk/repositories
-RUN echo "http://dl-cdn.alpinelinux.org/alpine/3.12/community" >> /etc/apk/repositories
+RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.12/community" >> /etc/apk/repositories
 
 RUN apk update \
 && apk --no-cache --update add netatalk avahi
