--- a/netatalk/Dockerfile
+++ b/netatalk/Dockerfile
@@ -13,9 +13,7 @@ RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.12/main" > /etc/apk/repositor
 RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.12/community" >> /etc/apk/repositories
 
 RUN apk update \
-&& apk --no-cache --update add netatalk avahi
-RUN sed -i 's/#enable-dbus=yes/enable-dbus=no/g' /etc/avahi/avahi-daemon.conf
-
+&& apk --no-cache --update add netatalk 
 
 # Copy root filesystem
 COPY rootfs /
